--- a/action.yml
+++ b/action.yml
@@ -16,3 +16,5 @@ runs:
     - name: executing script
       shell: bash
       run: ${{ github.action_path }}entrypoint.sh
+      env:
+        GH_TOKEN: ${{ github.token }}
