--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 ---
 name: "Install git-metrics"
 description: "This action will download the git-metrics binary from github and install it on the current runner."
+branding:
+  icon: activity
+  color: white
 inputs:
   version:
     description: "Expected version of git-metrics"
