fix: embed entrypoint in action
Signed-off-by: Jérémie Drouet <jeremie.drouet@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -12,16 +12,43 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: list files
+    - name: creating bin directory in path
       shell: bash
-      run: ls -lha ${{ github.action_path }}
+      run: |
+        mkdir -p $HOME/.local/bin
+        if [ -z "$( echo $GITHUB_PATH | grep $HOME/.local/bin )" ]; then
+            echo "$HOME/.local/bin" >> "$GITHUB_PATH"
+        fi
 
-    - name: making script executable
+    - name: downloading binary
       shell: bash
-      run: chmod +x ${{ github.action_path }}/entrypoint.sh
+      run: |
+        if [[ "$RUNNER_OS" == "Linux" ]]; then
+            if [[ "$RUNNER_ARCH" == "X64" ]]; then
+                export REMOTE_FILENAME=git-metrics_linux-x86_64
+            elif [[ "$RUNNER_ARCH" == "ARM64" ]]; then
+                export REMOTE_FILENAME=git-metrics_linux-aarch64
+            else
+                echo "::error title=⛔ platform arch ($RUNNER_ARCH) not yet supported"
+            fi
+            export TARGET_FILE=$HOME/.local/bin/git-metrics
+        elif [[ "$RUNNER_OS" == "macOS" ]]; then
+            if [[ "$RUNNER_ARCH" == "X64" ]]; then
+                export REMOTE_FILENAME=git-metrics_darwin-x86_64
+            elif [[ "$RUNNER_ARCH" == "ARM64" ]]; then
+                export REMOTE_FILENAME=git-metrics_darwin-aarch64
+            else
+                echo "::error title=⛔ platform arch ($RUNNER_ARCH) not yet supported"
+            fi
+            export TARGET_FILE=$HOME/.local/bin/git-metrics
+        else
+            echo "::error title=⛔ platform os ($RUNNER_OS) not yet supported"
+            exit 1
+        fi
 
-    - name: executing script
-      shell: bash
-      run: ${{ github.action_path }}/entrypoint.sh
+        releases=$(gh api --method GET /repos/jdrouet/git-metrics/releases --header "Accept: application/vnd.github+json" --header "X-GitHub-Api-Version: 2022-11-28")
+        binary_url=$(echo $releases | jq --raw-output ".[0].assets | map(select(.name == \"$REMOTE_FILENAME\")) | first | .browser_download_url")
+        curl -L -o $TARGET_FILE $binary_url
+        chmod +x $TARGET_FILE
       env:
         GH_TOKEN: ${{ github.token }}
