--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,9 @@ runs:
     - name: install gh
       uses: dev-hanz-ops/install-gh-cli-action@v0.2.0
 
+    - name: install jq
+      uses: dcarbone/install-jq-action@v2.1.0
+
     - name: creating bin directory in path
       shell: bash
       run: |
