--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ runs:
   using: composite
   steps:
     - name: install gh
-      uses: ksivamuthu/actions-setup-gh-cli@v3
+      uses: actions4gh/setup-gh@v1.0.2
 
     - name: install jq
       uses: dcarbone/install-jq-action@v2.1.0
