feat: set git user and email

--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,14 @@ runs:
             echo "$HOME/.local/bin" >> "$GITHUB_PATH"
         fi
 
+    - name: set user name
+      shell: bash
+      run: git config --global user.name 'github-actions[bot]'
+
+    - name: set user email
+      shell: bash
+      run: git config --global user.email "$GITHUB_ACTOR_ID+$GITHUB_ACTOR@users.noreply.github.com"
+
     - name: downloading binary
       shell: bash
       run: |
