feat: make sure it's not already installed
Signed-off-by: Jérémie Drouet <jeremie.drouet@gmail.com>

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: jdrouet/action-install-git-metrics@main
+      - uses: jdrouet/action-install-git-metrics@main
       - name: execute git-metrics
         run: git-metrics --help
 
@@ -19,6 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: jdrouet/action-install-git-metrics@main
       - uses: jdrouet/action-install-git-metrics@main
       - name: execute git-metrics
         run: git-metrics --help
