--- a/action.yml
+++ b/action.yml
@@ -12,13 +12,22 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: check if already installed
+      id: check-exists
+      shell: bash
+      run: |
+        [ -f $HOME/.local/bin/git-metric ] && echo "found=true" >> $GITHUB_OUTPUT
+
     - name: install gh
+      if: ${{ steps.check-exists.outputs.found != 'true' }}
       uses: actions4gh/setup-gh@v1.0.2
 
     - name: install jq
+      if: ${{ steps.check-exists.outputs.found != 'true' }}
       uses: dcarbone/install-jq-action@v2.1.0
 
     - name: creating bin directory in path
+      if: ${{ steps.check-exists.outputs.found != 'true' }}
       shell: bash
       run: |
         mkdir -p $HOME/.local/bin
@@ -27,6 +36,7 @@ runs:
         fi
 
     - name: downloading binary
+      if: ${{ steps.check-exists.outputs.found != 'true' }}
       shell: bash
       run: |
         if [[ "$RUNNER_OS" == "Linux" ]]; then
