--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        platform: ["macos-latest", "ubuntu-latest"]
+        platform: ['macos-latest', 'ubuntu-latest']
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v4
