feat: make sure action doesn't reinstall
Signed-off-by: Jérémie Drouet <jeremie.drouet@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,8 @@ jobs:
       - uses: ./
       - name: execute git-metrics
         run: git-metrics --help
+      - uses: ./
+        id: reinstall
+      - name: check if reinstall
+        if: ${{ steps.reinstall.outputs.already-installed == 'false' }}
+        run: exit 1
