fix: please super linter
Signed-off-by: Jérémie Drouet <jeremie.drouet@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -15,8 +15,8 @@ inputs:
 
 # Define your outputs here.
 outputs:
-  time:
-    description: 'Your output description here'
+  already-installed:
+    description: 'Wether git-metrics was already installed'
 
 runs:
   using: node20
