--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       fail-fast: true
       matrix:
         platform: ['macos-latest', 'ubuntu-latest']
-        version: ['v0.1.2']
+        version: ['v0.1.2', 'v0.1.4', 'v0.2.1']
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v4
